--- a/doc/doc_src/maus_user_guide.tex
+++ b/doc/doc_src/maus_user_guide.tex
@@ -1,4 +1,7 @@
 \documentclass[a4paper, 10pt] {report}
+
+\usepackage{tabularx}
+\usepackage{multirow}
 \begin{document}
 
 \vspace*{2.0cm}
@@ -9,26 +12,28 @@
 \Large{ \bf{User Guide} }
 \end{center}
 
-\chapter{Running for the First Time}
-\include{first_time_running}
+%\chapter{Running for the First Time}
+%\include{first_time_running}
 
-\include{simulation}
 
-\chapter{Detector Description}
+\chapter{Monte Carlo}
+\input{simulation}
+
+%\chapter{Detector Description}
 %\include{detectors/tof}
 %\include{detectors/tracker}
 %\include{detectors/emr}
 %\include{detectors/ckov}
 %\include{detectors/kl}
 
-\chapter{Geometry}
-\include{geometry_definitions}
+%\chapter{Geometry}
+%\include{geometry_definitions}
 
-\chapter{Appendix A: Run Control Variables}
-\include{run_controls} % automatically constructed by build script
+%\chapter{Appendix A: Run Control Variables}
+%\include{run_controls} % automatically constructed by build script
 
-\chapter{Appendix B: Spill Structure}
-\include{spill_schema} % automatically constructed by build script
+%\chapter{Appendix B: Spill Structure}
+%\include{spill_schema} % automatically constructed by build script
 
 \end{document}
 
