--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,10 @@
+MAUS-v0.1.4 (http://micewww.pp.rl.ac.uk/versions/show/21)
+  Bug #896: MapPyGroup birth and death
+	Bug #897: Optics test fails on Ubuntu
+	Bug #909: MAUS_THIRD_PARTY fails if relative path supplied
+	Feature #476: PhaseSpaceVector clean up
+	Feature #624: TransferMap cleanup
+
 MAUS-v0.1.3 (http://micewww.pp.rl.ac.uk/versions/show/20)
   Feature #342: scons cleanup
   Feature #707: PyROOT histogram reducer
