--- a/RELEASENOTES
+++ b/RELEASENOTES
@@ -4,6 +4,15 @@ http://micewww.pp.rl.ac.uk/projects/maus/roadmap
 
 Release Notes
 =============
+MAUS-v0.1.4
+  The following functionality was added:
+    - Tracker reconstruction to space points
+  If upgrading from the previous version, the following third party library scripts need to be rerun:
+    - third_party/bash/01python.bash
+    - third_party/bash/21root.bash
+    - third_party/bash/40python_extras.bash
+    - third_party/bash/60recpack.bash
+
 MAUS-v0.1.3
   The following functionality was added:
     - A python interface to ROOT for online histogramming has been introduced
