--- a/doc/doc_src/maus_user_guide.tex
+++ b/doc/doc_src/maus_user_guide.tex
@@ -2,6 +2,7 @@
 
 \usepackage{tabularx}
 \usepackage{multirow}
+\usepackage{graphicx}
 \begin{document}
 
 \vspace*{2.0cm}
@@ -15,6 +16,8 @@
 %\chapter{Running for the First Time}
 %\include{first_time_running}
 
+\chapter{Data Structure}
+\input{data_structure}
 
 \chapter{Monte Carlo}
 \input{simulation}
